2008-01-30  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/tools/editor.c:
 	ianjuta_document_manager_find_document_with_path expect an uri not
	a path

2008-01-29  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/libanjuta-sections.txt,
	libanjuta/interfaces/libanjuta.idl:
	Documentation fixes for IAnjutaDebugger* interfaces

=== anjuta 2.3.3 ===

2008-01-27  Naba Kumar  <naba@gnome.org>

	* Makefile.am, anjuta.spec.in, configure.in: Removed unmaintained
	rpm spec file.

	* plugins/symbol-browser/plugin.c: (on_editor_foreach_disconnect),
	(value_added_current_editor), (value_removed_current_editor):
	Removed dead code.

	* TODO.tasks: Updated.

	* libanjuta/anjuta-save-prompt.c: (anjuta_save_prompt_init): Added
	scrollwindow shadow in.

	* plugins/editor/anjuta-editor-scintilla.glade:
	* plugins/editor/style-editor.c: (create_style_editor_gui):
	Set style window transient and cetered for preferences window.
	Fixed Bug #365490 - problems displaying Scintilla Colors & Fonts dialog

	* plugins/editor/anjuta-editor-scintilla.glade:
	Fixes Bug #427108 - Scintilla plugin configuration folding-style
	setting not working

	* configure.in, NEWS: Updated for release 2.3.3

2008-01-26  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/anjuta-debug-manager.glade:
	Fix #512224: Use a string in english

2008-01-26  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/build-basic-autotools.c:
	ianjuta_document_manager_goto_file_line_mark needs an uri and
	not a file path

2008-01-26  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/symbol-browser/plugin.c,
	plugins/symbol-browser/an_symbol_view.c:
	use gnome_vfs_get_uri_from_local_path to get local path from uri
	This takes care of escaping some characters

2008-01-25  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/stack_trace.c:
	Probably fix #510028: crash debugger when having a relative filename